# swiftwire

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  client_example.cpp  server_example.cpp
include/swiftwire/: client.hpp  protocol.hpp  server.hpp
src/: CMakeLists.txt  client.cpp  server.cpp
